src/index.css
/* Typography */
html {
  font-size: 62.5%;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --ff-fraunces: "Fraunces", serif;
  --ff-montserrat: "Montserrat", sans-serif;

  /* Primary Colors */
  --dark-cyan: hsl(158, 36%, 37%);
  --cream: hsl(30, 38%, 92%);

  /* Neutral */
  --very-dark-blue: hsl(212, 21%, 14%);
  --dark-grayish-blue: hsl(228, 12%, 48%);
  --white: hsl(0, 0%, 100%);
}

body {
  font-family: var(--ff-montserrat);
  font-size: 1.4rem;
  height: 100vh;
  background-color: var(--cream);
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Links */
a {
  text-decoration: none;
}
/* Lists */
li {
  list-style: none;
}
/* Images */
img {
  width: 100%;
}

